--- a/src/components/TextsDisplayList.module.css
+++ b/src/components/TextsDisplayList.module.css
@@ -3,6 +3,7 @@
     max-width: 50rem;
     margin: 1rem auto;
     padding: 1rem 0;
+    margin-bottom: 260px;
     display: grid;
     gap: 1rem;
     grid-template-columns: repeat(3, 30%);
